tests/NormalTests/paczka1/small_fuzzy/31826192.err
Error in line 3: A148 A438 22,3
Error in line 5: A148 S990 91,7
